--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,30 @@
     <title>{{ .title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
+
+@keyframes scrollBg {
+            from {
+                transform: translateY(0px);
+            }
+            to {
+                transform: translateY(-330px);
+            }
+        }
+
+        .scroll-bg {
+            height: 100%;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding-bottom: 330px; /* Adjust this value if needed */
+            background-color: #E8BA9B;
+            background-image: url('https://andreivictor.ro/codepen/scroll-bg-animation-pinterest/bg_pasta_grid-3f880df3.jpg');
+            background-size: cover;
+            animation: scrollBg 35s linear infinite;
+            z-index: -1;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #121212;
@@ -43,6 +67,7 @@
     </style>
 </head>
 <body class="bg-gray-900 flex justify-center items-center h-screen">
+    <div class="scroll-bg"></div> <!-- Animated Background -->
     <div class="w-full max-w-xs m-auto bg-gray-800 rounded-lg shadow-md p-5">
         <h1 class="text-white text-3xl mb-5 text-center">{{ .title }}</h1>
         <form action="/check" method="post" class="bg-gray-800">
@@ -52,6 +77,7 @@
             <input type="submit" value="Check Website"
                 class="w-full bg-green-500 hover:bg-green-700 text-white font-bold py-3 px-4 rounded focus:outline-none focus:shadow-outline">
         </form>
+    </div>
     </div>
 </body>
 </html>
